Support multiple base directories

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 #media.baseDirectory=\\\\BizNAS\\Videos\\Boy Movies
-media.baseDirectory=\\\\BizNAS\\Videos\\Boy TV Series
+#media.baseDirectory=\\\\BizNAS\\Videos\\Boy TV Series
+media.baseDirectories[0]=\\\\BizNAS\\Videos\\Boy TV Series
+media.baseDirectories[1]=\\\\BizNAS\\Videos\\Boy Movies
 
 media.videoExtensions[0]=.mkv
 media.videoExtensions[1]=.mov
